# ticket-sum

./: .env.example  .gitignore  ALTERNATIVE_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  GITHUB_UPLOAD_INSTRUCTIONS.md  INSTALL.md  LANGFUSE_MIGRATION.md  LICENSE  PYTHON_UPGRADE.md  README.md  activate_python310.sh  advanced_analytics.py  agents.py  agents_backup.py  analytics_dashboard.py  app.py  collaboration_metrics.py  collaboration_metrics_fixes_summary.md  config.py  database_service.py  debug_interface.py  demo.py  demo_kaggle.py  deploy.sh  experiment_manager.py  health.py  health_check.py  install.sh  langsmith_integration.py  live_logger.py  main.py  models.py  pyproject.toml  replit.md  replit.toml  requirements-py310.txt  (+12 more)
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
